--- a/PMTD-inference/configs/e2e_PMTD_R_50_FPN_1x_ICDAR2015_train.yaml
+++ b/PMTD-inference/configs/e2e_PMTD_R_50_FPN_1x_ICDAR2015_train.yaml
@@ -48,3 +48,4 @@ SOLVER:
   WEIGHT_DECAY: 0.0001
   STEPS: (49500, 76500) # warmup_iter + (iter * 0.5, iter * 0.8)
   MAX_ITER: 94500 # iter = (image_num=9000 * warmup_epoch=160 / batch_size=16) = 90000, max_iter = (warmup_iter + iter)
+  CHECKPOINT_PERIOD: 1000
