--- a/PMTD-inference/configs/e2e_PMTD_R_50_FPN_1x_ICDAR2015_train.yaml
+++ b/PMTD-inference/configs/e2e_PMTD_R_50_FPN_1x_ICDAR2015_train.yaml
@@ -1,3 +1,9 @@
+INPUT:
+  TO_BGR255: False
+  PIXEL_MEAN: [0.485, 0.456, 0.406]
+  PIXEL_STD: [0.229, 0.224, 0.225]
+  MIN_SIZE_TRAIN: -1
+  MAX_SIZE_TRAIN: 1920
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
   WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50" # "/content/PMTD/PMTD-inference/models/PMTD_ICDAR2017MLT.pth"
